--- a/server/package.json
+++ b/server/package.json
@@ -20,10 +20,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.0",
     "multer": "^2.0.1",
     "openai": "^5.6.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "streamifier": "^0.1.1"
   }
 }
